fixed the product part overlaping

--- a/css/products.css
+++ b/css/products.css
@@ -50,7 +50,7 @@
 
 .card {
   margin-top: 15px;
-  overflow: hidden;
+  overflow-x: hidden;
   border-radius: 0;
   border: none;
 }
@@ -61,7 +61,6 @@
   width: 100%;
   min-height: 165px !important;
   max-height: 165px;
-
   margin-bottom: 15px;
 }
 .card figure {
@@ -89,7 +88,7 @@
   border: 1px solid var(--green);
   padding: 8px 16px;
   margin-top: -8px;
-  height: 95px;
+  /* height: 95px; */
 }
 
 .card-content p {
@@ -141,6 +140,13 @@
   color: black;
 }
 
+.products .row:nth-child(2){
+  margin-top: 6px;
+}
+.products .row:nth-child(3){
+  margin-top: 3px;
+}
+
 /* products part 2 */
 /* .products-2{
   padding: 0 0 88px;
@@ -148,6 +154,8 @@
 .products-2 h2 {
   padding-bottom: 72px;
 }
+
+
 
 /* deal part  */
 
