--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ body {
 } */
 .card {
   margin-top: 15px;
-  overflow: hidden;
+  overflow-x: hidden;
   border-radius: 0;
   border: none;
 }
@@ -221,7 +221,7 @@ body {
   border: 1px solid var(--green);
   padding: 8px 16px;
   margin-top: -8px;
-  height: 95px;
+  /* height: 95px; */
 }
 
 .card-content p {
